invoice looks good, pdf alignment is fixed and styling is coming up well

--- a/src/App.css
+++ b/src/App.css
@@ -37,5 +37,47 @@
   border-radius:6px;
   padding: 20px 25px;
 
+ 
+}
+
+/* the invoice style*/
+
+#report{ 
+font-family: "Calibri", Times, serif;
+font-size: 14px;
+
+}
+
+#report h4{
+  font-size: 18px;
+  color: green;
+  font-weight: 600;
+}
+
+#report .invoice{
+  font-size: 28px;
+  font-weight: 900;
+  color: blue;
+}
+
+#report h5{
+  font-size: 18px;
+  font-weight: 600;
   
+}
+
+#report h6{
+  font-size: 18px;
+  color: blue;
+  font-weight: 600;
+}
+
+#report span{ 
+  font-weight: bold;
+}
+
+h6 span{
+  font-size: 14px;
+  font-weight: bold;
+  color: black;
 }
